fixed overflow?

--- a/style.css
+++ b/style.css
@@ -342,6 +342,8 @@ body2{
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  overflow: auto;
+  z-index: 999;
 
 }
 
@@ -350,12 +352,14 @@ body2{
   opacity: 1;
   z-index: 999;
   transition: all 1.5s ease-out;
+  overflow: auto;
 
 }
 
 .pop-up {
   text-align: center;
   transition: all 1.5s ease-out;
+  z-index: 999;
 }
 
 .pop-up p {
